--- a/public/main.css
+++ b/public/main.css
@@ -150,6 +150,10 @@ form label {
   background: orange;
 }
 
+.tag-strategy {
+  background: cyan;
+}
+
 .delete {
   position: absolute;
   top: 10px;
