--- a/public/main.css
+++ b/public/main.css
@@ -154,6 +154,10 @@ form label {
   background: cyan;
 }
 
+.tag-mob {
+  background: chartreuse;
+}
+
 .delete {
   position: absolute;
   top: 10px;
