--- a/public/main.css
+++ b/public/main.css
@@ -45,7 +45,7 @@ header {
   background-color: steelblue;
   color: #fff;
   padding: 20px;
-  border-radius: 10px;
+  /* border-radius: 10px; */
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   animation-name: modalopen;
   animation-duration: var(--modal-duration);
@@ -60,12 +60,23 @@ header {
   }
 }
 
-form input,
-form textarea {
-  width: 95%;
+.form-control {
+  width: 100%
+}
+
+input,
+textarea {
+  width: 96.1%;
   padding: 10px;
   border: 1px solid #ccc;
-  border-radius: 5px;
+  /* border-radius: 5px; */
+}
+
+select{
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  /* border-radius: 5px; */
   margin: 10px 0;
 }
 
