--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -138,6 +138,15 @@ form label {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
+
+.image {
+  max-width: 100%; /* Set the maximum width of the image to 100% of the container */
+  height: auto; /* Maintain the aspect ratio */
+  max-height: 100px; /* Limit the height to 100 pixels */
+  display: block; /* Remove extra space beneath the image */
+  margin: 20px 5px; /* Center the image within the container */
+}
+
 .tag {
   display: inline-block;
   background-color: #333;
